--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/ui": "2.20.0",
+    "@nuxtjs/tailwindcss": "6.12.2",
     "nuxt": "^3.15.1",
     "vue": "latest",
     "vue-router": "latest"
