--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/color-mode": "3.5.2",
     "nuxt": "^3.15.1",
     "vue": "latest",
     "vue-router": "latest"
