--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/color-mode": "3.5.2",
+    "d3": "^7.9.0",
     "nuxt": "^3.15.1",
     "vue": "latest",
     "vue-router": "latest"
@@ -19,6 +20,7 @@
   "packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a",
   "devDependencies": {
     "@nuxt/ui": "2.20.0",
-    "@nuxtjs/tailwindcss": "6.12.2"
+    "@nuxtjs/tailwindcss": "6.12.2",
+    "@types/d3": "^7.4.3"
   }
 }
