--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,19 +1,17 @@
 {
-  "trailingComma": "es5",
-  "tabWidth": 4,
-  "semi": true,
-  "useTabs": false,
-  "bracketSpacing": true,
-  "bracketSameLine": false,
-  "overrides": [
-    {
-      "files": "*.vue",
-      "options": {
-        "tabWidth": 2
-      }
-    }
-  ],
-  "plugins": [
-    "prettier-plugin-tailwindcss"
-  ]
+    "trailingComma": "es5",
+    "tabWidth": 4,
+    "semi": true,
+    "useTabs": false,
+    "bracketSpacing": true,
+    "bracketSameLine": false,
+    "overrides": [
+        {
+            "files": "*.vue",
+            "options": {
+                "tabWidth": 2
+            }
+        }
+    ],
+    "plugins": ["prettier-plugin-tailwindcss"]
 }
