--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,32 +1,34 @@
 {
-  "name": "nuxt-app",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "preinstall": "npx only-allow pnpm",
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "postinstall": "nuxt prepare"
-  },
-  "dependencies": {
-    "@formkit/auto-animate": "^0.8.2",
-    "@nuxtjs/color-mode": "3.5.2",
-    "nuxt": "^3.15.2",
-    "vue": "latest",
-    "vue-router": "latest"
-  },
-  "packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a",
-  "devDependencies": {
-    "@nuxt/eslint": "^0.7.5",
-    "@nuxt/ui": "2.20.0",
-    "@nuxtjs/tailwindcss": "6.12.2",
-    "eslint": "^9.18.0",
-    "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.10",
-    "typescript": "^5.7.3"
-  }
+    "name": "nuxt-app",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "preinstall": "npx only-allow pnpm",
+        "build": "nuxt build",
+        "dev": "nuxt dev",
+        "generate": "nuxt generate",
+        "preview": "nuxt preview",
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix",
+        "prettier": "prettier . --check",
+        "prettier:fix": "prettier . --write",
+        "postinstall": "nuxt prepare"
+    },
+    "dependencies": {
+        "@formkit/auto-animate": "^0.8.2",
+        "@nuxtjs/color-mode": "3.5.2",
+        "nuxt": "^3.15.2",
+        "vue": "latest",
+        "vue-router": "latest"
+    },
+    "packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a",
+    "devDependencies": {
+        "@nuxt/eslint": "^0.7.5",
+        "@nuxt/ui": "2.20.0",
+        "@nuxtjs/tailwindcss": "6.12.2",
+        "eslint": "^9.18.0",
+        "prettier": "^3.4.2",
+        "prettier-plugin-tailwindcss": "^0.6.10",
+        "typescript": "^5.7.3"
+    }
 }
