--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
         "@nuxtjs/tailwindcss": "6.12.2",
         "@vue/test-utils": "^2.4.6",
         "eslint": "^9.18.0",
+        "eslint-config-prettier": "^10.0.1",
         "happy-dom": "^16.7.2",
         "playwright-core": "^1.49.1",
         "prettier": "^3.4.2",
