--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,10 @@
     },
     "dependencies": {
         "@nuxtjs/color-mode": "3.5.2",
+        "@pinia/nuxt": "^0.9.0",
         "apexcharts": "^4.4.0",
         "nuxt": "^3.15.2",
+        "pinia": "^2.3.1",
         "vue": "latest",
         "vue-router": "latest",
         "vue3-apexcharts": "^1.8.0"
