--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
         "postinstall": "nuxt prepare"
     },
     "dependencies": {
+        "@formkit/auto-animate": "^0.8.2",
         "@nuxtjs/color-mode": "3.5.2",
         "@pinia/nuxt": "^0.9.0",
         "apexcharts": "^4.4.0",
